# target-test-dir

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs  procmacro.rs
macro/src/procmacro/: tests.rs
support/: Cargo.toml
support/src/: basedir.rs  lib.rs  procmacro.rs  tests.rs
support/src/procmacro/: tests.rs
target-test-dir/: Cargo.toml
target-test-dir/src/: basedir.rs  lib.rs  testdir.rs
target-test-dir/tests/: basic.rs  test-case-composition.rs
