[workspace]
members = [
  "support",
  "target-test-dir",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/nathan-at-least/target-test-dir"

[workspace.dependencies]
once_cell = "1.15.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"

[workspace.dependencies.syn]
version = "1.0.103"
features = [
  "full",
]
