[package]
name = "target-test-dir-macro"
description = "A proc-macro attribute implementation for providing test-specific directories (use `target-test-dir`)."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
prettyplease.workspace = true
