[package]
name = "target-test-dir-support"
description = "Support for the `target-test-dir` proc-macro crate."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
