[package]
name = "target-test-dir"
description = "A proc-macro attribute for providing test-specific directories."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true

[dependencies.target-test-dir-macro]
path = "../macro"
version = "^0.2.0"
